--- a/memos/aop/01.aop-overview.md
+++ b/memos/aop/01.aop-overview.md
@@ -101,7 +101,7 @@ public class TraceLogAspect {
 #### Adviceの追加
 
 
-```
+```java
 @Aspect
 public class TraceLogAspect {
 
@@ -130,7 +130,7 @@ public class TraceLogAspect {
 
 #### Pointcutの追加
 
-```
+```java
 @Component
 @Aspect
 public class TraceLogAspect {
@@ -158,7 +158,7 @@ Pointcutだけ定義したクラスを作成し、複数のクラス(Aspect)でP
 
 Spring AOPでは、XMLスキーマを使ってAspectを作成できます。
 
-```
+```java
 public class TraceLogger {
 
     public void loggingBegin(JoinPoint joinPoint){
